# MedicalCodingAgentStack

./: .gitignore  APIReadme.md  CompleteASTACKProject.md  Documentation_Link_For_Specific_Premade_Tools.txt  MultiSession.md  README.md  agentstack.json  final_report_with_rationale.json  finalanswerDg.md  medical_diagnosis_output.json  pyproject.toml  pytest.ini  requirements.txt  task1output.json  tox.ini  validation.json  validation_results.json
src/: api.py  crew.py  final_report_with_rationale.json  main.py  medical_diagnosis_output.json  validation_results.json
src/config/: agents.yaml  tasks.yaml
src/tools/: __init__.py  custom_tool.py  gpt4_suggestion_tool.py  icd10_database_tool.py
tests/: __init__.py  run_tests.py  test_multi_session.py
tests/results/: report_20241230_174809.html  summary_20241230_174810.txt
