[tool.poetry]
name = "astack_crew"
version = "0.0.1"
description = "This is the start of your AgentStack project."
authors = ["Bastian Venegas <bastian@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
agentstack = {extras = ["crewai"], version="0.2.2.2"}
pytest = "^8.3.4"
pytest-html = "^4.1.1"
pytest-xdist = "^3.6.1"
pytest-asyncio = "^0.25.0"

[tool.poetry.group.dev.dependencies]
tox = "^3.28.0"
tox-poetry = "^0.5.0"

[project.scripts]
astack_crew = "astack_crew.main:run"
run_crew = "astack_crew.main:run"
train = "astack_crew.main:train"
replay = "astack_crew.main:replay"
test = "astack_crew.main:test"